# swig_general

./: .gitignore  CMakeLists.txt  readme.md
build_Makefile/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: swig_lua.cmake
source/: CurlMan.cpp  CurlMan.h  DCCollector.cpp  DCCollector.h  DCComponent.cpp  DCComponent.h  DCDefinition.h  DCHVLayout.cpp  DCHVLayout.h  DCLayout.cpp  DCLayout.h  EvrSession.cpp  EvrSession.h  Test_DCCollector.cpp  Test_DCCollector.h  add.cpp  add.h  main.cpp
source/allexamples/: 10-at-a-time.c  CurlExample.cpp  CurlExample.h  anyauthput.c  certinfo.c  chkspeed.c  cookie_interface.c  curlx.c_DONTINCLUDE  debug.c  externalsocket.c  fileupload.c  fopen.c  ftp-wildcard.c  ftpget.c  ftpgetinfo.c  ftpgetresp.c  ftpsget.c  ftpupload.c  ftpuploadfrommem.c  ftpuploadresume.c  getinfo.c  getinmemory.c  getredirect.c  http-post.c  http2-download.c  http2-pushinmemory.c  http2-serverpush.c  http2-upload.c  httpcustomheader.c  httpput.c  https.c  imap-append.c  imap-copy.c  imap-create.c  imap-delete.c  imap-examine.c  imap-fetch.c  imap-list.c  imap-lsub.c  imap-multi.c  (+46 more)
swig.in/: evr-internals-api.i
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  TestCurlExample.cpp  TestCurlExample.h  main.cpp
test/go/: REFERENCE.md  main.go
test/go/src/evr/: evr.go
test/java/: evr.jnilib  main.java
test/java/api/internals/evr/: Math.java  evr.java  evr.jnilib  evrJNI.java  main.java
test/lua/: main.lua  run.sh
test/python/Darwin/: dataCollectorRawTest.py  dataCollectorRawTest2.py  dataCollectorRawTest3.py  dcCollector_unittest.py  evr.py
test/python/Linux/: _evr-internals-api-python-swig-.so.1  evr.py  main.py  run.sh
test/python/Linux/include/evr-internals-api/: evr-internals-api.h
test/scriptrunner/: ScriptRunner.h  main.cpp
test/scriptrunner/python/: ScriptRunner.cpp
